--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
             <p>
               Hi! I'm Amit Kumar. 
               <br/>
-              I am an ENGINEER by profession, SKETCH ARTIST by heart and full time
+              I am an ENGINEER by profession, SKETCH ARTIST by heart and full-time
               <span class="primary"> Senior Software Engineer </span> @ <span class="primary upper">Bed, Bath & Beyond.</span> 
               <br/>
-              At BBBY, currently working on Product Catalogue application which helps thousands of vendor and store manager to manage the inventory and stay updated with product details.
+              At BBBY, I work on Product Catalogue application which helps thousands of vendors and store managers with inventory management.
               <br/>
-              I have a bachelor degree in <span class="primary">Conputer Science</span> from Jaipur Engineering College & Research Center - (Rajasthan Technical University), Jaipur, Rajasthan.
+              I have a bachelors degree in <span class="primary">Computer Science</span> from Jaipur Engineering College & Research Center - (Rajasthan Technical University), Jaipur, Rajasthan.
             </p>
             <br/>
             <p>  
-              I love to solve, puzzle, coding problem and develop application which impact million lives. In the freetime, i sketch, play chess and do competitive programming.
+              I love solving problems pertaining to algorithmic analysis, competitive programming, and generic software dev. In my free time I sketch, and play chess.
             </p>
           </div>
         </div>
@@ -166,7 +166,7 @@
                   <div class="e-content__body">
                     <h3>ADVANCED JAVASCRIPT</h3>
                     <p>
-                      Having 8yrs of experience in JavaScript. Using javascript i created a lots of application and websites.
+                      Having 8yrs of experience in JavaScript. Using JavaScript I created a lot of applications and websites.
                     </p>
                   </div>
                 </div>
@@ -179,7 +179,7 @@
                   <div class="e-content__body">
                     <h3>React Library</h3>
                     <p>
-                      Having 8yrs of experience in JavaScript. Using javascript i created a lots of application and websites.
+                      For the last 4 years, I was working on react.
                     </p>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                   <div class="e-content__body">
                     <h3>Node js</h3>
                     <p>
-                      Having 8yrs of experience in JavaScript. Using javascript i created a lots of application and websites.
+                      I have a total of 3 years of experience in node.js
                     </p>
                   </div>
                 </div>
@@ -232,7 +232,7 @@
                   <div class="e-content__body">
                     <h3>C++</h3>
                     <p>
-                      Generally used while participating in competitive programming and solving leetcode questions.
+                      Generally used while participating in competitive programming and solving dsa questions.  
                     </p>
                   </div>
                 </div>
