--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
       <title>Amit Kumar Portfolio | FrontEnd Developer</title>
   
         <!-- Google Font: Lato -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-   
+     
+ 
       <link rel="stylesheet" href="css/font-awesome.min.css">
       <link rel="stylesheet" href="css/main.css">
    </head>
@@ -31,7 +29,7 @@
           <header class="h-section__header p-section__header h-100">
             <div class="h-section__header-inner">
               <div class="h-section__avatar">
-                <img class="avatar_img" src="/img/amitbw.jpg" alt=""" />
+                <img class="avatar_img" src="/img/amitbw.jpg" alt="Amit Kumar" width="280" height="280" />
               </div>
             </div>
           </header>
