--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                   </div>
                 </div>
               </div>
-              <div class="c-grid__item-6 pb-0">
+              <!-- <div class="c-grid__item-6 pb-0">
                 <div class="s-content mb">
                   <div class="s-media e-content">
                     <div class="s-figure">
@@ -347,23 +347,23 @@
                     <div class="progress-bar" style="width:60%"></div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="c-grid__item-6 pb-0">
                 <div class="s-content mb">
                   <div class="s-media e-content">
                     <div class="s-figure">
-                      <div class="c-number primary">40%</div>
+                      <div class="c-number primary">10%</div>
                     </div>
                     <div class="s-body">
                       <h3>GCP</h3>
                     </div>
                   </div>
                   <div class="progress">
-                    <div class="progress-bar" style="width:40%"></div>
+                    <div class="progress-bar" style="width:10%"></div>
                   </div>
                 </div>
               </div>
-              <div class="c-grid__item-6 pb-0">
+              <!-- <div class="c-grid__item-6 pb-0">
                 <div class="s-content mb">
                   <div class="s-media e-content">
                     <div class="s-figure">
@@ -377,7 +377,7 @@
                     <div class="progress-bar" style="width:70%"></div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
 
           
@@ -405,7 +405,24 @@
                 <div class="c-content">
                   <div class="c-grid">
                     <div class="c-grid__item-5 pb-0">
-                      <div class="work__timeframe work__btm">March, 2019 - Present</div>
+                      <div class="work__timeframe work__btm">Jan, 2023 - Present</div>
+                      <h3 class="work__heading work__btm">Publicis Sapient</h3>
+                      <h4 class="work__title work__btm">Senior Assicate Experience Technology</h4>
+                      <div class="work__location work__btm">Gurugram, Haryana</div>
+                    </div>
+                    <div class="c-grid__item-7 pb-0">
+                      <p> 
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline__item">
+                <div class="timeline__point"></div>
+                <div class="c-content">
+                  <div class="c-grid">
+                    <div class="c-grid__item-5 pb-0">
+                      <div class="work__timeframe work__btm">March, 2019 - Jan, 2023</div>
                       <h3 class="work__heading work__btm">BED, BATH & BEYOND</h3>
                       <h4 class="work__title work__btm">Senior Software Engineer</h4>
                       <div class="work__location work__btm">Gurugram, Haryana</div>
@@ -423,7 +440,7 @@
                 <div class="c-content">
                   <div class="c-grid">
                     <div class="c-grid__item-5 pb-0">
-                      <div class="work__timeframe work__btm">April, 2018 - Feb, 2019</div>
+                      <div class="work__timeframe work__btm">Sep, 2018 - Feb, 2019</div>
                       <h3 class="work__heading work__btm">Vicara Infotech Group AG</h3>
                       <h4 class="work__title work__btm">Consultant Front-end Engineerr</h4>
                       <div class="work__location work__btm">Delhi, Delhi</div>
@@ -441,7 +458,7 @@
                 <div class="c-content">
                   <div class="c-grid">
                     <div class="c-grid__item-5 pb-0">
-                      <div class="work__timeframe work__btm">Jan, 2017 - Feb, 2018</div>
+                      <div class="work__timeframe work__btm">Jan, 2017 - Aug, 2018</div>
                       <h3 class="work__heading work__btm">KiwiSoft Technologies</h3>
                       <h4 class="work__title work__btm">Full Stack Engineer</h4>
                       <div class="work__location work__btm">Noida, U.P.</div>
